--- a/portfolio.html
+++ b/portfolio.html
@@ -345,7 +345,7 @@
                 ./images/img09-mob-2x.jpg 2x"
                 media="(max-width:767px)"
                 >
-                <img src="./images/img09.jpg" alt="Growing businnes" width="370"/>
+                <img src="./images/img09.jpg" alt="Growing businnes" />
               </picture>
               <p class="projects__text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>  
             </div>
