--- a/portfolio.html
+++ b/portfolio.html
@@ -428,5 +428,32 @@
         </div>
       </div>
     </footer>
+     <div class="mobile-menu js-mobile-menu">
+      <button class="close-menu js-close-menu">
+        <svg class="icon-close" width="19" height="19">
+          <use href="./images/icons..svg#icon-close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-nav">
+        <li class="mobile-nav__item"><a href="./index.html" class="mobile-nav__link">Студия</a></li>
+        <li class="mobile-nav__item"><a href="./portfolio.html" class="mobile-nav__link ">Портфолио</a></li>
+        <li class="mobile-nav__item"><a href="" class="mobile-nav__link">Контакты</a></li>
+      </ul>
+
+      <ul class="contacts">
+        <li class="contacts__item"><a href="tel:+380961111111" class="contacts__link mobile__tel">+380 961 111 111</a></li>
+        <li class="contacts__item"><a href="mailto:info@devstudio.com" class="contacts__link mail__mobile">info@devstudio.com</a></li>
+      </ul>
+
+      <ul class="social-links-menu">
+        <li class="social-links-menu__item"><a href="" class="soc-mobile__link">Instagram</a></li>
+        <li class="social-links-menu__item"><a href="" class="soc-mobile__link">Twitter</a></li>
+        <li class="social-links-menu__item"><a href="" class="soc-mobile__link">Facebook</a></li>
+        <li class="social-links-menu__item"><a href="" class="soc-mobile__link">Linkenid</a></li>
+      </ul>
+    </div>
+    
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
