--- a/index.html
+++ b/index.html
@@ -102,15 +102,33 @@
 
         <ul class="pictures">
           <li class="pictures__item">
-            <img src="./images/img.jpg" alt="photo" width="370" height="294">
+           <picture>
+            <source
+            srcset="./images/img.jpg 1x,
+            ./images/img-2x.jpg 2x"
+            >
+             <img src="./images/img.jpg" alt="photo" width="370" height="294">
+           </picture>
             <h3 class="pictures__title">Десктопные приложения</h3>
           </li>
           <li class="pictures__item">
-            <img src="./images/box2.jpg" alt="photo" width="370" height="294">
+           <picture>
+            <source
+            srcset="./images/box2.jpg 1x,
+            ./images/box2-2x.jpg 2x"
+            >
+             <img src="./images/box2.jpg" alt="photo" width="370" height="294">
+           </picture>
             <h3 class="pictures__title">Мобильные приложения</h3>
           </li>
           <li class="pictures__item">
-            <img src="./images/box3.jpg" alt="photo" width="370" height="294">
+            <picture>
+              <source
+              srcset="./images/box3.jpg 1x,
+              ./images/box3-2x.jpg 2x"
+              >
+              <img src="./images/box3.jpg" alt="photo" width="370" height="294">
+            </picture>
             <h3 class="pictures__title">Дизайнерские решения</h3>
           </li>     
        </ul>
